exports[`Items should render 1`] = `
<div>
  <ul
    className="tc-list-items table">
    <li
      className="tc-list-header">
      <div
        className="tc-list-header-item tc-list-header-title">
        Name
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Author
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Created
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Modified
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id={undefined}>
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id={undefined}>
            Foo
          </span>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id={undefined}>
            Bar
          </span>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Items should render with display mode if provided 1`] = `
<div>
  <ul
    className="tc-list-items tile">
    <li
      className="tc-list-header">
      <div
        className="tc-list-header-item tc-list-header-title">
        Name
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Author
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Created
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Modified
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id={undefined}>
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id={undefined}>
            Foo
          </span>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id={undefined}>
            Bar
          </span>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Items should render with id if provided 1`] = `
<div>
  <ul
    className="tc-list-items table">
    <li
      className="tc-list-header">
      <div
        className="tc-list-header-item tc-list-header-title">
        Name
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Author
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Created
      </div>
      <div
        className="tc-list-header-item tc-list-header-text">
        Modified
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id="list-items-0"
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id="list-items-0-title">
            Hello world
          </span>
        </div>
        <div
          className="tc-actions btn-group">
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-edit"
              title={null} />
          </button>
          <button
            aria-describedby={42}
            className="btn btn-link"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            role="link"
            type="button">
            <i
              aria-hidden="true"
              className="fa fa-trash-o"
              title={null} />
          </button>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id="list-items-1"
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id="list-items-1-title">
            Foo
          </span>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
    <li>
      <div
        className="tc-list-item"
        id="list-items-2"
        onClick={undefined}
        onDoubleClick={undefined}
        role="button">
        <div
          className="tc-list-item-title">
          <span
            id="list-items-2-title">
            Bar
          </span>
        </div>
        <div
          className="tc-list-item-definition-list">
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Author
            </div>
            <div
              className="tc-list-item-definition-description"
              title="Jean-Pierre DUPONT">
              Jean-Pierre DUPONT
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Created
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
          <div
            className="tc-list-item-definition-item">
            <div
              className="tc-list-item-definition-term">
              Modified
            </div>
            <div
              className="tc-list-item-definition-description"
              title="2016-09-22">
              2016-09-22
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
